--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Jobcart20</title>
@@ -8,16 +9,20 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="assets/bootstrap.min.css" rel="stylesheet">
   <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700|Poppins:300,400,500,600,700,800,900"
-      rel="stylesheet">
+    href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700|Poppins:300,400,500,600,700,800,900"
+    rel="stylesheet">
   <link href="assets/main.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
   <link href="assets/responsive.css" rel="stylesheet">
-  
+  <script src="https://kit.fontawesome.com/7e68437c48.js" crossorigin="anonymous"></script>
+
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
